# Media-Server

./: .gitignore  CMakeLists.txt  README.md  dev-docker-compose.yml  dev.Dockerfile  prod-docker-compose.yml  prod.Dockerfile
docs/: GraduateWork.md
src/: frame_provider.cpp  frame_provider.h  frame_provider_manager.cpp  frame_provider_manager.h  main.cpp  notifier.cpp  notifier.h  observer.h  provider.h  servlet.h  split.cpp  split.h
src/converters/: mjpeg_to_h264.cpp  mjpeg_to_h264.h  mpeg2ts_packager.cpp  mpeg2ts_packager.h
src/frame/: observer.h  provider.cpp  provider.h  provider_manager.cpp  provider_manager.h
src/hls/: servlet.h
src/http/: base_request.cpp  base_request.h  request.cpp  request.h  response.cpp  response.h
src/port_handler/: port_handler.h  port_handler_base.h  port_handler_manager.cpp  port_handler_manager.h  request_dispatcher.h
src/rtp/: deserializable.cpp  deserializable.h  packet.cpp  packet.h
src/rtp/mjpeg/: packet.cpp  packet.h
src/rtsp/: client.cpp  client.h  request.cpp  request.h  response.cpp  response.h
src/sdp/: session_description.cpp  session_description.h
src/sock/: client_socket.h  exception.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
src/types/: byte.h  h264_frame.h  mjpeg_frame.h  mpeg2ts_chunk.h
